--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ Django==1.6.7
 Markdown==2.5.1
 South==1.0.1
 argparse==1.2.1
+coverage==3.7.1
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-debug-toolbar==1.2.2
+django-jenkins==0.16.3
 django-toolbelt==0.0.1
 feedparser==5.1.3
 gunicorn==19.1.1
