--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.7
 Markdown==2.5.1
 South==1.0.1
 argparse==1.2.1
+astroid==1.2.1
 coverage==3.7.1
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -10,7 +11,10 @@ django-jenkins==0.16.3
 django-toolbelt==0.0.1
 feedparser==5.1.3
 gunicorn==19.1.1
+logilab-common==0.63.0
 psycopg2==2.5.4
+pylint==1.3.1
+six==1.8.0
 sqlparse==0.1.13
 static3==0.5.1
 wsgiref==0.1.2
