--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,23 @@
 Django==1.6.7
 Markdown==2.5.1
+PyYAML==3.11
 South==1.0.1
 argparse==1.2.1
 astroid==1.2.1
 coverage==3.7.1
+coveralls==0.4.4
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-debug-toolbar==1.2.2
 django-jenkins==0.16.3
 django-toolbelt==0.0.1
+docopt==0.6.2
 feedparser==5.1.3
 gunicorn==19.1.1
 logilab-common==0.63.0
 psycopg2==2.5.4
 pylint==1.3.1
+requests==2.4.3
 six==1.8.0
 sqlparse==0.1.13
 static3==0.5.1
