--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.6.7
-Markdown==2.5.1
 PyYAML==3.11
+Pygments==2.0.1
 South==1.0.1
 argparse==1.2.1
 astroid==1.2.1
@@ -15,6 +15,7 @@ docopt==0.6.2
 feedparser==5.1.3
 gunicorn==19.1.1
 logilab-common==0.63.0
+markdown2==2.3.0
 psycopg2==2.5.4
 pylint==1.3.1
 requests==2.4.3
