--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.7
 PyYAML==3.11
 Pygments==2.0.1
 South==1.0.1
+Werkzeug==0.9.6
 argparse==1.2.1
 astroid==1.2.1
 coverage==3.7.1
@@ -9,7 +10,9 @@ coveralls==0.4.4
 dj-database-url==0.3.0
 dj-static==0.0.6
 django-debug-toolbar==1.2.2
+django-extensions==1.4.6
 django-jenkins==0.16.3
+django-pylibmc-sasl==0.2.4
 django-toolbelt==0.0.1
 docopt==0.6.2
 feedparser==5.1.3
@@ -17,6 +20,7 @@ gunicorn==19.1.1
 logilab-common==0.63.0
 markdown2==2.3.0
 psycopg2==2.5.4
+pylibmc==1.3.0
 pylint==1.3.1
 requests==2.4.3
 six==1.8.0
